--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,7 +11,7 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-a {
+/* a {
   color: inherit;
   text-decoration: none;
 }
@@ -28,4 +28,4 @@ a {
     color: white;
     background: black;
   }
-}
+} */
