--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,7 +7,6 @@ body, html{
   padding: 0;
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
-  line-height: 1.5;
-  background-color: #FF3CAC;
-background-image: linear-gradient(225deg, #FF3CAC 0%, #784BA0 50%, #2B86C5 100%);
+  background-color: #313846;
+  
 }
